
	* examples, src/Makefile.am, src/Emakefile.in,
	doc/Makefile.am, ebin/Makefile.am, Makefile.am, configure.ac: Move
	examples to a dedicated directory. They may be disabled at configure
	time.

	* src/Makefile.am, examples/Makefile.am: Add +B arguments to erl(1).
	With this, Ctrl+C will halt the emulator immediatly.

	* include/xmpp.hrl, include/Makefile.am: xmpp.hrl is unused.

2008-08-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stanza.erl: Add functions to set both the sender and
	the recipient at the same time.

	* c_src/make-specs-list: Historical XEPs are accepted; some are still
	used in Ejabberd for instance.

	* include/exmpp.hrl: The list of namespaces is now complete. A string
	version is added for each namespace too; this avoids calls to
	atom_to_list. Fix NS_ROSTER_EXCHANGE duplicated definitions.

	* c_src/xmpp_ns.h.in, c_src/xmpp_names.h.in, c_src/xmpp_attrs.h.in:
	Historical XEPs are accepted now. Also some XEPs were updated on July
	31th.

2008-07-31  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Fix documentation for
	parse_document_fragment/{1,2}. Add functions make_element/{1,2} and
	make_attribute/{1,2} to create simple nodes without knowing the
	records.

2008-07-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Remove *_by_name suffix from function names.
	For example, get_element_by_name/2 is now get_element/2. For
	get_element/{2,3} and get_elements/{2,3}, aliases are still provided
	for backward compatibility, though they're marked as deprecated.
	element_ns_matches/2 was renamed to element_matches_by_ns/2 for
	consistency. Add remove_element/{2,3}, remove_elements/{2,3},
	remove_element_by_ns/2 and remove_elements_by_ns/2 functions.

	* src/core/exmpp_presence.erl (set_show): Fix by using the new
	remove_element function instead of the non-existing remove_child
	function.

	* Makefile.am, c_src/Makefile.am, testsuite/Makefile.am: updateknown